[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "zoro"
version = "0.1.0"
description = "CLI wrapper that exposes the reporter prompt builder as `zoro`."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "TYR", email = "devnull@example.com" }]
dependencies = [
  "openai>=1.43.0",
  "tiktoken>=0.7.0",
]

# Importante: solo exponemos 'zoro' para NO interferir con el binario 'reporter' existente.
[project.scripts]
zoro = "reporter.cli:main"

[tool.hatch.build.targets.wheel]
# Incluimos el paquete 'reporter' (layout sin 'src/')
packages = ["reporter"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
  ".venv",
  "__pycache__",
  "*.pyc",
  "*.pyo",
  "*.pyd",
  ".reporter",
  "dist",
  "build",
]
